[project]
name = "starter-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[mujoco]==0.29.1",
    "matplotlib>=3.10.8",
    "moviepy==1.0.3",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "stable-baselines3==2.3.0",
    "torch==2.6.0",
    "tqdm>=4.67.3",
]
